--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,8 @@ dev = [
     "mypy>=1.5.0",
     "isort>=5.12.0",
     "pre-commit>=3.3.0",
+    "python-dotenv>=1.0.0",
+    "types-requests>=2.31.0",
 ]
 
 [project.urls]
