--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,8 +36,13 @@ dev = [
     "pytest>=7.4.0",
     "pytest-cov>=4.1.0",
     "pytest-asyncio>=0.21.0",
+    "pytest-mock>=3.11.0",
+    "coverage>=7.3.0",
     "python-dotenv>=1.0.0",
     "types-requests>=2.31.0",
+    "black>=23.0.0",
+    "isort>=5.12.0",
+    "flake8>=6.0.0",
 ]
 
 [project.urls]
@@ -53,3 +58,27 @@ include = ["pubsub*"]
 testpaths = ["tests"]
 python_files = ["test_*.py", "*_test.py"]
 addopts = "--cov=pubsub --cov-report=term-missing"
+
+[tool.black]
+line-length = 100
+target-version = ['py39']
+include = '\.pyi?$'
+extend-exclude = '''
+/(
+    \.git
+  | \.venv
+  | build
+  | dist
+  | \.md$
+)/
+'''
+
+[tool.isort]
+profile = "black"
+line_length = 100
+skip_glob = ["*.md"]
+
+[tool.flake8]
+max-line-length = 100
+extend-ignore = ["E203", "W503"]
+extend-exclude = ["*.md", ".git", "__pycache__", ".venv", "build", "dist"]
