--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,8 @@ PUBSUB_CONNECTION_TIMEOUT=10
 
 # Reconnection settings
 PUBSUB_RECONNECTION_ENABLED=true
-PUBSUB_RECONNECTION_ATTEMPTS=0  # 0 for infinite attempts
+PUBSUB_RECONNECTION_ATTEMPTS=0
+# 0 for infinite attempts
 PUBSUB_RECONNECTION_DELAY_MS=2000
 PUBSUB_RECONNECTION_DELAY_MAX_MS=10000
 
@@ -53,7 +54,7 @@ PUBSUB_LOG_TO_CONSOLE=true
 PUBSUB_LOG_FILE=
 
 # Log format
-PUBSUB_LOG_FORMAT=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+PUBSUB_LOG_FORMAT='%(asctime)s - %(name)s - %(levelname)s - %(message)s'
 
 # ----------------------------------------------------------------------------
 # PERFORMANCE & OPTIMIZATION
