--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ classifiers = [
 dependencies = [
     "python-socketio[client]>=5.10.0",
     "requests>=2.32.0",
+    "python-dotenv>=1.1.1"
 ]
 
 [project.optional-dependencies]
@@ -43,6 +44,7 @@ dev = [
     "black>=23.0.0",
     "isort>=5.12.0",
     "flake8>=6.0.0",
+    "rich>=14.1.0"
 ]
 
 [project.urls]
