--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,16 @@ PUBSUB_LOG_FILE=
 PUBSUB_LOG_FORMAT='%(asctime)s - %(name)s - %(levelname)s - %(message)s'
 
 # ----------------------------------------------------------------------------
+# DATABASE LOGGING CONFIGURATION
+# ----------------------------------------------------------------------------
+# Enable SQLite database logging
+PUBSUB_DB_LOGGING_ENABLED=false
+# Path to the SQLite database file (e.g., logs/pubsub.db)
+PUBSUB_DB_FILE=
+# Table name for logs
+PUBSUB_DB_TABLE_NAME=logs
+
+# ----------------------------------------------------------------------------
 # PERFORMANCE & OPTIMIZATION
 # ----------------------------------------------------------------------------
 # Thread pool size for message handlers
