--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,13 @@ EXAMPLE_PUBLISH_DELAY=2
 EXAMPLE_MESSAGE_INTERVAL=5
 # Producer name for test messages
 EXAMPLE_PRODUCER_NAME=example-producer
+
+# ----------------------------------------------------------------------------
+# BUSINESS EVENT LOGGER CONFIGURATION
+# ----------------------------------------------------------------------------
+# Enable the dedicated business event logger
+BUSINESS_LOGGER_ENABLED=false
+# Path to the SQLite database file for business events
+BUSINESS_LOGGER_DB_FILE=./logs/business_events.db
+# Table name for business events
+BUSINESS_LOGGER_TABLE_NAME=business_events
