--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ classifiers = [
 dependencies = [
     "python-socketio[client]>=5.10.0",
     "requests>=2.32.0",
-    "python-dotenv>=1.1.1"
+    "python-dotenv>=1.1.1",
+    "pydantic>=2.11.9"
 ]
 
 [project.optional-dependencies]
