--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 # WebSocket server URL for the PubSub service
 PUBSUB_SERVER_URL=http://localhost:5000
 # Port for the real-time status page
-# PUBSUB_STATUS_PORT=8000
+PUBSUB_DIAGNOSTIC_STATUS_PORT=8000
 # Reconnection settings
 PUBSUB_RECONNECTION_ENABLED=true
 PUBSUB_RECONNECTION_ATTEMPTS=0
