--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@
 # ----------------------------------------------------------------------------
 # WebSocket server URL for the PubSub service
 PUBSUB_SERVER_URL=http://localhost:5000
-# Port for the real-time status page
-PUBSUB_STATUS_PAGE_PORT=8000
+# Port for the real-time status page (use 8001 if 8000 is in use)
+PUBSUB_STATUS_PAGE_PORT=8001
 # Reconnection settings
 PUBSUB_RECONNECTION_ENABLED=true
 PUBSUB_RECONNECTION_ATTEMPTS=0
