--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "Python.PubSub.Client"
+name = "python_pubsub_client"
 version = "0.1.0"
 authors = [
     { name = "venantvr", email = "venantvr@gmail.com" },
