--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
     "requests>=2.32.0",
     "python-dotenv>=1.1.1",
     "pydantic>=2.11.9",
+    "flask>=2.0.0",
 ]
 
 [project.license]
